factor out env setup for server and manager start scripts